<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_uid" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_api_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_api_key" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_appid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_appid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_appid" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_pub0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_pub0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_pub0" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/btn_submit"
                style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>